xx Jan 2009: 0.6.5 Miek <miek@miek.nl>
  * rdup-simple back as rdup-simple.sh
  * rdup-ln.sh: small tweaks


30 Dec 2008: 0.6.4 Miek <miek@miek.nl>
 - further refinements and tweaks -
  * rdup-up: further updates and refinements
  * rdup-up: added strippath() function to strip leading path components
  * doc: minor updates to the manual pages, added a rdup-simple like
    script to rdup-backups.7
  * rdup-ln.sh: a shell script for checking and copying a previous
    rdup backup. Depends on GNU date and GNU cp. Installs into 
    /usr/lib/rdup/. Previously a small script called rdup-snap-link
    did this.


17 Dec 2008: 0.6.4-rc1 Miek <miek@miek.nl>
  - major feature enhancements, two new programs -
    + rdup-tr: transform rdup output to something else
    + rdup-up: update a directory tree with rdup archive

 * rdup: Added '%N' to the format string, which prints the
   path, but in case of soft- and hardlinks it will only
   print the link's name not the '-> target' part
 * rdup: rdup.1.in had a long deserved make-over
 * rdup: Print symlinks correctly when there named on the cmd line
 * rdup: regexp: don't use g_slist_next, but k->next in gfunc.c
 * rdup: Suid/sgid/sticky bit output was corrected
 * rdup-tr: Added rdup-tr; a tool to convert rdup output to
   (modified) rdup output, tar, pax or cpio files
 * rdup-tr: Don't compile rdup-tr if libarchive is not found
 * rdup-tr: rdup-tr.1 manpage
 * rdup-up: Added rdup-up; C version of rdup-snap
 * rdup-up: Added rdup-up.1 manpage
 * rdup-up: Support for fifos, pipes, devices
 * updated rdup-backups.7 as general info about backups with rdup
 * Set the copyright to 2009 already


11 Nov 2009: 0.6.3 Miek <miek@miek.nl>
 * make regular expressions actually work (patch from Crispin Boylan)


03 Nov 2008: 0.6.2 Miek <miek@miek.nl>
 * rdup-utils: completely removed from rdup(-core).
   There is now a seperate svn repos with those tools. 
 * rdup: Added -R switch, which will reverse rdup's output